--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -118,6 +118,11 @@ input[type=checkbox].colored-primary:checked~.text:before, input[type=radio].col
 .navbar .navbar-inner .navbar-header .navbar-account .account-area>li .dropdown-menu.dropdown-login-area>li.edit {text-align: center}
 .header-right {display: initial;}
 .header-right a{margin-top: 3px;float: right;margin-right: 5px;}
+.header-right input {
+    margin-top: 3px;
+    float: right;
+    margin-right: 5px;
+}
 /* End of the header area */
 
 /* Profile settings */
@@ -168,6 +173,7 @@ input[type=checkbox].colored-primary:checked~.text:before, input[type=radio].col
 .table-design thead{background-color: #43ce7c;color: #fff;}
 .edit{    background: #8cc473;}
 .delete{    background: #d45858;}
+.assign{    background: #face53;}
 .emplpoyee-select{width: 150px;
     margin-top: 2px;
     margin-right: 20px;}
@@ -179,7 +185,12 @@ input[type=checkbox].colored-primary:checked~.text:before, input[type=radio].col
     border-radius: 20%;
     text-decoration: none !important;
   margin-right: 3px !important;}
-  .employee-table thead tr th:last-child{width:68px;}
+  .orange-span {
+    color: #f9b541 !important;
+}
+  .employee-table thead tr th:last-child{width:90px;}
+  .last-child-one thead tr th:last-child{width:50px;}
+  .last-child-one tbody tr td .checkbox{padding-top:0px !important}
   .tickets-container .tickets-list .ticket-item .ticket-state {top: -5px !important;left: -11px !important;}
   .tickets-container .tickets-list {padding: 5px 10px !important;height: 306px !important;}
   .tickets-container { padding: 12px 10px 17px 10px !important;}
@@ -209,6 +220,7 @@ textarea{resize: none;}
 .task-container .tasks-list .task-item .task-creator {top: 95px !important}
 .task-container .tasks-list .task-item .task-assignedto {top: 95px !important}
 .modal-body button{text-align: center !important}
+.widget-cust{min-height:41px !important;}
 .force-overflow
 {
 	min-height: 450px;
@@ -406,7 +418,7 @@ textarea{resize: none;}
     border-radius: 4px !important;
     font-size: 20px;
     font-weight: normal;
-    margin-top: 36px;
+    margin-top: 0px;
 }
 .upload-title{font-size: 16px;}
 .upload-img-area {border:2px dashed #ccc;border-radius:5px;}
@@ -424,7 +436,7 @@ textarea{resize: none;}
 	position: relative;
 	display: block;
 	vertical-align: top;
-	width: 84px;
+	width: 100px;
 	height: 22px;
 	padding: 3px;
 	margin: 0 10px 2px 0;
@@ -555,7 +567,7 @@ textarea{resize: none;}
 	border-color: #43ce7c;
 }
 .switch-flat .switch-input:checked ~ .switch-handle {
-	left: 62px;
+	left: 78px;
 	background: #43ce7c;
 	box-shadow: none;
 }
