--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -19,8 +19,8 @@ min-width: 280px;
 max-width: 340px;
 width: 25%;
 height: 100%;
-background: #2c3e50d1;
-color: #f5f5f5;
+background: #d2d2d2;
+color: #444;
 overflow: hidden;
 position: relative;
 }
@@ -33,6 +33,7 @@ min-width: 58px;
 #frame #sidepanel #profile {
 width: 80%;
 margin: 25px auto;
+border-bottom: 2px solid #ccc;
 }
 @media screen and (max-width: 735px) {
 #frame #sidepanel #profile {
@@ -103,8 +104,12 @@ border: 2px solid #e74c3c;
 border: 2px solid #95a5a6;
 }
 #frame #sidepanel #profile .wrap p {
-float: left;
-margin-left: 15px;
+      float: left;
+      margin-left: 15px;
+      font-size: 16px;
+      font-weight: 600;
+      padding-top: 12px;
+      color: #556080;
 }
 @media screen and (max-width: 735px) {
 #frame #sidepanel #profile .wrap p {
@@ -308,11 +313,11 @@ color: #f5f5f5;
 #frame #sidepanel #search input:-moz-placeholder {
 color: #f5f5f5;
 }
-#frame #sidepanel #contacts {
+/* #frame #sidepanel #contacts {
 height: calc(100% - 177px);
 overflow-y: scroll;
 overflow-x: hidden;
-}
+} */
 @media screen and (max-width: 735px) {
 #frame #sidepanel #contacts {
 height: calc(100% - 149px);
@@ -345,11 +350,10 @@ padding: 6px 0 46px 8px;
 }
 }
 #frame #sidepanel #contacts ul li.contact:hover {
-background: #32465a57;
+background: #c3c3c3;
 }
 #frame #sidepanel #contacts ul li.contact.active {
-background: #32465a57;
-border-right: 5px solid #435f7a;
+background: #c3c3c3;
 }
 #frame #sidepanel #contacts ul li.contact.active span.contact-status {
 border: 2px solid #32465a !important;
@@ -561,15 +565,18 @@ margin-bottom: 20px;
 margin: 6px 8px 0 0;
 }
 #frame .content .messages ul li.sent p {
-background: #2c3e50d1;
-color: #f5f5f5;
+  background: #f6f6f6;
+      color: #444;
+      box-shadow: 0 0 10px #ccc;
 }
 #frame .content .messages ul li.replies img {
 float: right;
 margin: 6px 0 0 8px;
 }
 #frame .content .messages ul li.replies p {
-background: #f5f5f5;
+  background: #f6f6f6;
+      color: #444;
+      box-shadow: 0 0 10px #ccc;
 float: right;
 }
 #frame .content .messages ul li img {
@@ -580,7 +587,7 @@ float: left;
 #frame .content .messages ul li p {
 display: inline-block;
 padding: 10px 15px;
-border-radius: 20px;
+border-radius: 8px;
 max-width: 205px;
 line-height: 130%;
 }
@@ -603,7 +610,7 @@ float: left;
 border: none;
 width: calc(100% - 90px);
 padding: 11px 32px 10px 8px;
-font-size: 0.8em;
+font-size: 0.9em;
 color: #32465a;
 }
 @media screen and (max-width: 735px) {
@@ -619,7 +626,7 @@ position: absolute;
 right: 60px;
 z-index: 4;
 margin-top: 10px;
-font-size: 1.1em;
+font-size: 1.4em;
 color: #435f7a;
 opacity: .5;
 cursor: pointer;
@@ -639,7 +646,7 @@ border: none;
 width: 50px;
 padding: 12px 0;
 cursor: pointer;
-background: #2c3e50d1;
+background: #d2d2d2;
 color: #f5f5f5;
 }
 @media screen and (max-width: 735px) {
